@@ -1,3 +1,8 @@
+2003-09-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* loadmsgcat.c (open, close, read, mmap, munmap): Define as
+	function-like macros.
+
 2003-09-02  Ulrich Drepper  <drepper@redhat.com>
 
 	* loadmsgcat.c: For _LIBC, call not cancelable versions of open, close,
